--- a/MyBucketList/app/src/main/AndroidManifest.xml
+++ b/MyBucketList/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyBucketList"
         tools:targetApi="31">
         <activity
+            android:name=".PlacesToGo"
+            android:exported="false" />
+        <activity
+            android:name=".ThingsToDo"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
