Created adapter Created recycler view Set adapter for things_to_do

--- a/MyBucketList/app/src/main/AndroidManifest.xml
+++ b/MyBucketList/app/src/main/AndroidManifest.xml
@@ -14,10 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".PlacesToGo"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Place to go"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ThingsToDo"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Things to do"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
